--- a/css/blocks/nlen--program-opportunities.css
+++ b/css/blocks/nlen--program-opportunities.css
@@ -2,7 +2,7 @@
     
     .nlen--container {
         display: flex;
-        padding: 4.9375rem 2rem;
+        padding: 4.9375rem 4rem;
         gap: var(--spacing-7xl, 4rem);
         flex-shrink: 0;
         align-self: stretch;
@@ -10,7 +10,7 @@
 
         .heading-and-support-text {
             display: flex;
-            width: 22.5rem;
+            width: 3%;
             flex-direction: column;
             align-items: flex-start;
             flex: 0 0 auto;
